[package]
name = "gmhelper"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
notify = "6.1.1"
serde = { "version" = "1.0.228", "features" = ["derive"] }
serde_json = { "version" = "1.0.145" }
image = "0.25"
gif = "0.13"

[dependencies.uuid]
version = "1.10.0"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
